--- a/HotelBooking/HotelBooking/Views/Shared/_Layout.cshtml
+++ b/HotelBooking/HotelBooking/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <script src="~/Scripts/moment.js"></script>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -25,13 +25,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a href="/Hotel/HotelList" class=""> 
+                 <img src="https://d1e2uvyjorgoaf.cloudfront.net/HolidayMelogo.png" alt="Holidayme" width="150" height="50" />
+                </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Hotel", "HotelList", "Hotel")</li>
+                    <li>@Html.ActionLink("BookingList", "BookingList", "Booking")</li>
+                    <li>@Html.ActionLink("RoomList", "RoomList", "RoomType")</li>
                 </ul>
             </div>
         </div>
