--- a/HotelBooking/HotelBooking/Views/Shared/_SearchLayoutPage.cshtml
+++ b/HotelBooking/HotelBooking/Views/Shared/_SearchLayoutPage.cshtml
@@ -28,7 +28,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("My Application", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a href="/Hotel/HotelList" class="">
+                    <img src="https://d1e2uvyjorgoaf.cloudfront.net/HolidayMelogo.png" alt="Holidayme" width="150" height="50" />
+                </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -38,10 +40,8 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">.NET</a></li>
-                            <li><a href="#">HTML5</a></li>
-                            <li><a href="#">ASP.NET MVC</a></li>
-                            <li><a href="#">Java</a></li>
+                            <li><a href="#">IND</a></li>
+                            <li><a href="#">EURO</a></li>
                         </ul>
                     </li>
                 </ul>
